<resources>
    <string name="app_name">Sled Dog Quiz</string>
    <string name="title">Sled Dog Quiz</string>
    <string name="start_game">Let\'s start!</string>
    <string name="question_1">1. Put dogs in right order (drag\u0026drop) (0 to 4 points)</string>
    <string name="question_two">2. Which ones are sled dog breeds/mixes? (0 to 7 points, -1 point for each wrong answer)</string>
    <string name="greyster">Greyster</string>
    <string name="samoyed">Samoyed</string>
    <string name="greyhound">Greyhound</string>
    <string name="kleekai">Alaskan Kleekai</string>
    <string name="siberian_husky">Siberian Husky</string>
    <string name="alaskan_husky">Alaskan Husky</string>
    <string name="next">Next</string>
    <string name="alaskan_malamute">Alaskan Malamute</string>
    <string name="greenland">Greenland Dog</string>
    <string name="eurodog">Eurodog</string>
    <string name="rottweiler">Rottweiler</string>
    <string name="norwegian_elkhound">Norwegian Elkhound</string>
    <string name="malinois">Belgian Malinois Shepherd</string>
    <string name="question_three">3. How this discipline is called? (5 points)</string>
    <string name="your_answer">Write your answer here</string>
    <string name="pulka">pulka</string>
    <string name="pulka_Cap">Pulka</string>
    <string name="scores">Score:</string>
    <string name="rg_question_1">What \"gee\" means?</string>
    <string name="rg_question_2">How was called first mushing race?</string>
    <string name="rg_question_3">What breed invented Leonard Seppala?</string>
    <string name="rg_question_4">Which discipline is the fastest one?</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="faster">faster</string>
    <string name="slow_down">slow down</string>
    <string name="Iditarod">Iditarod</string>
    <string name="yukon_quest">Yukon Quest</string>
    <string name="all_alaska">All Alaska Sweepstakes</string>
    <string name="la_prene">La Pirene</string>
    <string name="bikejoring">Bikejoring</string>
    <string name="rig">rig</string>
    <string name="scooter">scooter</string>
    <string name="canicross">canicross</string>
    <string name="result">Result</string>
    <string name="your_points">Your points</string>
    <string name="knowledge_mushing">Your knowledge about mushing is&#8230;</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="mushing_poor">really poor, you know nothing about it.</string>
    <string name="mushing_little">not bad but you have to study more!</string>
    <string name="mushing_know_sth">very good, you are going to be a pro!</string>
    <string name="are_you_musher">excellent! Are you a musher?</string>
    <string name="exit">Click again to exit</string>
</resources>
