<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/your_points"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/final_score"
            style="segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="20"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ProgressBar
            android:id="@+id/cds_bar2"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:progress="0" />

        <TextView
            style="segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/knowledge_mushing"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/score_desc"
            style="segment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="restart"
            android:text="@string/restart" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="quit"
            android:text="@string/quit" />

    </LinearLayout>
</ScrollView>